ui.frontend/src/main/webpack/etisalat/styles/action-button.scss
/*Download map button start*/

.action-button {
	.cmp-button {
		text-align: center;
		padding: 15px .5rem;
		border-radius: 4px;
		width: 100%;
		border: 1px solid $darkest-night;
		outline: 0;
		margin-left: 20px;
		line-height: 3rem;
		cursor: pointer;
	}
	@media (min-width:$screen-lg-max){
		.cmp-button {
			margin-left: 0px;
			min-width: 180px;
			width: auto;
			padding: 0rem 0.5rem;
			float: left;
		}
	}
	.cmp-button:hover {
		border: 1px solid $main-green;
	}
	a {
		color:$almost-black;

	}
	.cmp-button__text {
		font-weight: 700;
		text-transform: uppercase;
		transition: all .3s ease-in-out;
		color:$almost-black;
		font-size: $font14;
		letter-spacing: .14285714em;
	}
	.cmp-button__text:hover {
		color: $main-green;
	}
}
.action-button .cmp-button:active{
 background-color:  $main-green;
   border: 1px solid $main-green;
    color: $white;
}
@media (min-width: 365px) and (max-width:$screen-md-max){
	.action-button {
		.aem-Grid.aem-Grid--default--12 > .aem-GridColumn.aem-GridColumn--default--12{
			width:100%;
		}
		a{
			display:inline-block;
		}
		.cmp-button{
			padding: 3px .5rem;
			margin-left: 0;
		}
	}
}
/*Download map button end*/

