bugfix/ETSL-510 alignment issue for button

--- a/ui.frontend/src/main/webpack/etisalat/styles/action-button.scss
+++ b/ui.frontend/src/main/webpack/etisalat/styles/action-button.scss
@@ -14,7 +14,7 @@
 	}
 	@media (min-width:$screen-lg-max){
 		.cmp-button {
-			margin-left: 0px;
+			margin-left: calc(#{$margin-step-3} + 1px);
 			min-width: 180px;
 			width: auto;
 			padding: 0rem 0.5rem;
